add the index link

--- a/profile.html
+++ b/profile.html
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <li>
-        <a href="profile.html">My profile</a>
-    </li>
+    <h1>Sorod Yawa</h1>
 </body>
 </html>
