--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <li>
         <a href="profile.html">My profile</a>
     </li>
+    <li>
+        <a href="camt.html">CAMT page</a>
+    </li>
 </body>
 </html>
