--- a/friend.html
+++ b/friend.html
@@ -6,14 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <li>
-        <a href="profile.html">My profile</a>
-    </li>
-    <li>
-        <a href="camt.html">CAMT page</a>
-    </li>
-    <li>
-        <a href="friend.html">Friend Profile</a>
-    </li>
+    <h1>Chonthicha Maitham</h1>
+    <p>ei_ei</p>
 </body>
 </html>
